<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SoleraJobs</string>

    <string name="server_client_id">1028378897751-26ajlfcu97mo8n9d0f1a00lcfc1p26vo.apps.googleusercontent.com</string>

    <string name="solera_jobs">Solera Jobs</string>

    <string name="nav_tasks">Tareas</string>
    <string name="nav_stadistics">Estadisticas</string>
    <string name="nav_config">Configuración</string>

    <string name="total_hours">Trabajado: %1$s</string>

    <string name="start_date"><b>Inicio:</b> %1$s</string>
    <string name="end_date"><b>Fin:</b> %1$s</string>
    <string name="client_name"><b>Cliente:</b> %1$s</string>
    <string name="project_name"><b>Proyecto:</b> %1$s</string>
    <string name="project_manager_name"><b>Manager:</b> %1$s</string>

    <string name="create_task_title">Crear registro</string>
    <string name="edit_task_title">Editar registro</string>

    <string name="save">Guardar</string>
    <string name="edit">Editar</string>
    <string name="create">Crear</string>
    <string name="delete">Eliminar</string>

    <string name="select_client">Seleccione un cliente</string>
    <string name="select_project">Seleccione un proyecto</string>
    <string name="select_requirement">Seleccione un requerimiento</string>
    <string name="select_date">Seleccione fecha</string>
    <string name="select_hours">Seleccione horas</string>
    <string name="insert_comment">Agregue un comentario</string>

    <string name="success_save_quickaccess">Accesos directos guardados correctamente. Podrá visualizarlos en la pantalla inicial.</string>

</resources>